# mcp-azure-apim

./: .gitignore  README.md  azure.yaml  entra_id_authent.sh
.devcontainer/: devcontainer.json  init.sh
.github/: copilot-instructions.md
docs/: REWRITE-COMMIT-MESSAGES.md
hooks/: gen_access_token.sh  gen_client_secret.sh  gen_client_secret_1.sh  gen_client_secret_2.sh  gen_mcp_entraid_policy.sh  gen_mcp_json.sh  gen_python_env.sh  setup_api_center_portal.sh
infra/: auth_init.py  auth_init.sh  bicepconfig.json  main.bicep  main.parameters.json  oauth_app.bicep
infra/modules/: ai-foundry-project.bicep  ai-foundry.bicep  api-center.bicep  api-management.bicep  api.bicep  app-insights.bicep  app-reg.bicep  fastmcp-app-reg.bicep  log-analytics-workspace.bicep  mcp-api.bicep  mcp-proxy.bicep  mcp.bicep  named-value.bicep  setlist-mcp-app-reg.bicep
src/apim/mslearn/: mcp-policy-mslearn.xml  mcp-prm-policy-mslearn.xml
src/apim/setlistfm/: mcp-policy-setlistfm-entra-id-template.xml  mcp-policy-setlistfm-entra-id.xml  mcp-policy-setlistfm.xml  my_other_policy_obo.xml  openapi-setlistfm.json  policy-setlistfm.xml
src/python/: app_role.json  app_roles_merged.json  azure_ai_agent_mcp.py  azure_ai_agent_mcp_2.py  azure_ai_agent_mcp_sk.py  create-agent-identity-blueprint.py  fastmcp_client_secured_mslearn.py  mcp_client.py  mcp_client.txt  mcp_client_af.py  mcp_client_auth_entra_id.py  mcp_client_entra_id.py  mcp_client_rate.py  mcp_client_secured_mslearn.py  mcp_server_auth_entra_id.py  out.txt  pyproject.toml  render.py  test_token.sh
src/python/agent_id/: assign_agent_id_admin_role_to_sp.sh  assign_agent_id_adminstration_role_to_current_user.sh  create-agent-identity-blueprint.py  create_and_configure_app_registration.sh
src/shell/: debug_api_artists.sh  debug_api_setlists.sh  test_api.py  test_api.sh  test_api.txt  test_mcp_quick.sh
(+3 files in other folders)
