[project]
name = "mcp-azure-apim"
version = "0.1.0"
description = "AI Foundry Agent using MCP server for Setlistfm API via Azure APIM"
authors = ["Benoit Moussaud <bmoussaud@microsoft.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.0",
    "python-dotenv",
    "semantic-kernel",
   
    "azure-ai-projects",
    "azure-ai-inference",
    "azure-ai-agents==1.1.0b4",
    "azure-identity",
    "azure-monitor-opentelemetry",
    "msal",
]

[tool.setuptools.packages.find]
where = ["."]