[project]
name = "mcp-azure-apim"
version = "0.1.0"
description = "AI Foundry Agent using MCP server for Setlistfm API via Azure APIM"
authors = ["Benoit Moussaud <bmoussaud@microsoft.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.0",
    "python-dotenv",
    "azure-ai-projects~=2.0.0b1",
    "azure-identity~=1.20.0",
    "azure-monitor-opentelemetry",
    "msal",
    "openai~=2.0.1",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
prerelease = "allow"